# adhd-board

./: .env.example  .gitignore  API_SECURITY.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LOVABLE_SETUP.md  PANGOLIN_SSO_SETUP.md  PORTAINER_DEPLOYMENT.md  README.md  SECURITY_QUICKSTART.md  SSO_INTEGRATION.md  docker-compose.portainer-proxy.yml  docker-compose.portainer-public.yml  docker-compose.portainer.yml  docker-compose.prod.yml  docker-compose.yml  nginx-proxy.conf  note_renderer.py  note_template.html  print_message.py  pyproject.toml
.github/workflows/: docker-publish.yml
app/: __init__.py  config.py
app/api/: __init__.py  notes.py  templates.py
app/enums/: categories.py
app/models/: __init__.py  note.py  note_template.py
app/schemas/: __init__.py  note.py
app/services/: __init__.py  note_renderer.py  note_service.py  printer.py  template_service.py
app/templates/: default_note.html
app/utils/: cli.py
backend/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  tmp_preview.html
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  categories.py  health.py  notes.py
backend/app/enums/: __init__.py
backend/app/middleware/: __init__.py  security.py
backend/app/models/: __init__.py  base.py  category.py  (+1 more)
backend/tests/: __init__.py  conftest.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.lovable.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.jsx  app.css  index.css
tests/: __init__.py  conftest.py
tests/integration/: test_notes_api.py  test_templates_api.py
tests/manual/: test_generate_preview.py  test_print_note.py
tests/unit/: test_note_renderer.py  test_printer_service.py  test_template_service.py
(+31 files in other folders)
