[project]
name = "adhd-board"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
    # Existing dependencies
    "playwright>=1.47",
    "pillow>=10.0",
    "pyusb>=1.2.1",
    "python-escpos>=3.0a9",

    # Flask core
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-migrate>=4.0",
    "flask-cors>=4.0",
    "flask-smorest>=0.44",

    # Serialization & validation
    "marshmallow>=3.21",
    "marshmallow-sqlalchemy>=1.0",

    # Database
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",

    # Configuration
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",

    # Production server
    "gunicorn>=21.2",
    "gevent>=24.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4",
    "pytest-flask>=1.3",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "factory-boy>=3.3",
    "faker>=22.0",

    # Code quality
    "black>=24.0",
    "ruff>=0.1",
    "mypy>=1.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "docker*", "migrations*"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
